# build-your-own-distributed-training

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  train.py
config/: 125m.yaml  7b.yaml  base.yaml  test_tiny.yaml
docs/: ARCHITECTURE.md  RUNBOOK.md
src/: config.py
src/checkpointing/: checkpoint.py  recovery.py
src/data/: dataloader.py  dataset.py  tokenizer.py
src/model/: attention.py  embeddings.py  mlp.py  transformer.py
src/observability/: logging.py  metrics.py  profiler.py
src/parallelism/: fsdp_utils.py  mesh.py  process_groups.py  tensor_parallel.py
src/training/: grad_utils.py  loop.py  optimizer.py  scheduler.py  trainer.py
src/utils/: dtype.py  env.py  seed.py
tests/: _dist_utils.py
tests/fault/: test_corrupt_checkpoint.py  test_rank_failure.py
tests/integration/: test_2d_parallel_forward.py  test_checkpoint_resume.py  test_convergence_tiny.py  test_dataloader_sharding.py  test_mixed_precision.py
tests/performance/: bench_communication.py  bench_memory.py  bench_throughput.py
tests/unit/: test_checkpoint_serialization.py  test_column_row_linear.py  test_fsdp_wrapping.py  test_grad_accumulation.py  test_grad_clipping.py  test_metrics.py  test_process_groups.py  test_scheduler.py  test_tensor_parallel.py
