[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-training"
version = "0.1.0"
description = "From-scratch 2D-parallel (FSDP x Tensor Parallel) LLM training loop built on raw PyTorch primitives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3,<2.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tokenizer = ["transformers>=4.40"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",   # line length handled by formatter; long docstrings are intentional
    "B008",   # function calls in argument defaults (argparse/factory patterns)
    "SIM108", # ternary suggestions can hurt readability of explicit branches
]

[tool.ruff.lint.per-file-ignores]
# Tests use module-level dist fixtures and intentional fault injection.
"tests/*" = ["B011", "E402"]
"src/parallelism/tensor_parallel.py" = ["N802"]  # autograd.Function method names

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true
# torch's dynamic attributes and DTensor stubs make full --strict noisy; we keep
# strong checking on our own code while tolerating torch's incomplete stubs.
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = false
exclude = ["tests/", "build/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore:Detected call of:UserWarning",
]
